create for recipe

--- a/src/app/pages/recipe/recipe.component.html
+++ b/src/app/pages/recipe/recipe.component.html
@@ -327,7 +327,7 @@
         <label id="success" *ngIf="isSuccess">{{sucess}}</label>
 
 
-        <button pButton label="Enregistrer" type="submit" [loading]="loading" class="p-button-orange mt-4"></button>
+        <button pButton label="Enregistrer" type="submit"  class="p-button-orange mt-4"></button>
 
       </div>
     </form>
