--- a/src/app/pages/course/modalpurchase/modalpurchase.component.html
+++ b/src/app/pages/course/modalpurchase/modalpurchase.component.html
@@ -1,7 +1,7 @@
 <div class="">
   <form class="grid newform " #f="ngForm" (ngSubmit)="save()">
     <div class="col-12 card p-fluid">
-        <!--<h5>Ajouter un nouveau Approvisionnement</h5>-->
+      <!--<h5>Ajouter un nouveau Approvisionnement</h5>-->
 
       <div class="grid p-3  entete bg-primary">
 
@@ -12,22 +12,20 @@
 
         <div class="field col-2">
           <label htmlFor="datePurchase">Date </label>
-          <p-calendar [(ngModel)]="data.datePurchase" 
-          dateFormat="dd-mm-yy" 
-          [showOnFocus]="false"
-            showIcon="true"
-            
-          name="datePurchase" id="datePurchase" ></p-calendar>
+          <p-calendar [(ngModel)]="data.datePurchase" dateFormat="dd-mm-yy" [showOnFocus]="false" showIcon="true"
+            name="datePurchase" id="datePurchase"></p-calendar>
           <!--(onFocus)="$event.preventDefault()"-->
         </div>
-        
+
         <div class="field col-5">
           <label htmlFor="shop">Fournisseur</label>
-          <p-dropdown [options]="shops"  optionLabel="name" name="shop" [(ngModel)]="data.shop"  >
+          <p-dropdown [options]="shops" optionLabel="name" name="shop" [(ngModel)]="data.shop">
             <ng-template let-shop pTemplate="item">
               <div class="flex align-items-center operatingSystems-item">
                 <div class="flex align-items-center operatingSystems-item">
-                  <div> {{shop?.name}}({{ shop.addressPrincipale?.streetName }}, {{ shop.addressPrincipale?.streetNumber }}, {{ shop.addressPrincipale?.label }}, {{ shop.addressPrincipale?.city }}, {{ shop.addressPrincipale?.country.name }}.)</div>
+                  <div> {{shop?.name}}({{ shop.addressPrincipale?.streetName }}, {{ shop.addressPrincipale?.streetNumber
+                    }}, {{ shop.addressPrincipale?.label }}, {{ shop.addressPrincipale?.city }}, {{
+                    shop.addressPrincipale?.country.name }}.)</div>
                 </div>
 
               </div>
@@ -47,128 +45,139 @@
           </p-dropdown>
         </div>-->
 
-      <!--<div class="grid col">-->
+        <!--<div class="grid col">-->
         <div class="col-3">
           <div class="field">
             <label htmlFor="montant">Montant</label>
-            <p-inputNumber name="montant" id="montant" [(ngModel)]="data.montant" [showButtons]="true" [min]="0" ></p-inputNumber>
+            <p-inputNumber name="montant" id="montant" [(ngModel)]="data.montant" [showButtons]="true"
+              [min]="0"></p-inputNumber>
           </div>
         </div>
 
         <div class="col-2">
           <div class="field ">
             <label htmlFor="currency">Devise</label>
-            <p-dropdown [options]="currencys"  optionLabel="name" name="currency" [(ngModel)]="data.currency" ></p-dropdown>
+            <p-dropdown [options]="currencys" optionLabel="name" name="currency"
+              [(ngModel)]="data.currency"></p-dropdown>
           </div>
         </div>
-      <!--</div>-->
+        <!--</div>-->
 
-    </div>
-    <p class="divider mt-4" ></p>
-    <p class="divider"></p>
+      </div>
+      <p class="divider mt-4"></p>
+      <p class="divider"></p>
 
-     <!--Formulaire d'ajout-->
-     <h3>Saisie nouvel achat de produit </h3>
-     <div  class="cardnew mt-5 mb-5">
-      <form class="p-fluid  ">
-        <div class="grid">
+      <!--Formulaire d'ajout-->
+      <h3>Saisie nouvel achat de produit </h3>
+      <div class="cardnew mt-5 mb-5">
+        <form class="p-fluid  ">
+          <div class="grid">
 
-          <div class="col-3">
-            <div class="field ">
-              <label htmlFor="product{{detailPurchasesForms.length-1}}">Produit</label>
-              <!--<p-dropdown [options]="categorys" optionLabel="name" [(ngModel)]="category" name="categoty"  (ngModelChange)="getProductCategory(category)"></p-dropdown>-->
-              <p-dropdown [filter]="true" filterBy="name" [options]="products" optionLabel="name"
-                name="product{{detailPurchasesForms.length-1}}" (onFocus)="getProducts()"
-                [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].product"
-                (ngModelChange)="changeProduct(detailPurchasesForms[detailPurchasesForms.length-1].product,detailPurchasesForms.length-1)">
-                <ng-template let-product pFilter="product.category.name" pTemplate="item">
-                  <div class="flex align-items-center operatingSystems-item">
-                    <div>{{product.name}} ({{product.category.name}} / {{product?.conditioning?.name}})
+            <div class="col-3">
+              <div class="field ">
+                <label htmlFor="product{{detailPurchasesForms.length-1}}">Produit</label>
+                <!--<p-dropdown [options]="categorys" optionLabel="name" [(ngModel)]="category" name="categoty"  (ngModelChange)="getProductCategory(category)"></p-dropdown>-->
+                <p-dropdown [filter]="true" filterBy="name" [options]="products" optionLabel="name"
+                  name="product{{detailPurchasesForms.length-1}}" (onFocus)="getProducts()"
+                  [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].product"
+                  (ngModelChange)="changeProduct(detailPurchasesForms[detailPurchasesForms.length-1].product,detailPurchasesForms.length-1)">
+                  <ng-template let-product pFilter="product.category.name" pTemplate="item">
+                    <div class="flex align-items-center operatingSystems-item">
+                      <div>{{product.name}} ({{product.category.name}} / {{product?.conditioning?.name}})
+                      </div>
                     </div>
-                  </div>
-                </ng-template>
-              </p-dropdown>
+                  </ng-template>
+                </p-dropdown>
+              </div>
             </div>
-          </div>
-          <div style="margin-top: 5px; margin-left: -5px;" class="col-1">
-            <button pButton pRipple icon="pi pi-filter-fill" style="margin-top: 20px;"
-              class="p-button-rounded p-button-primary mr-2"></button>
-          </div>
-          <!--<div class="col-3">
+            <div style="margin-top: 5px; margin-left: -5px;" class="col-1">
+              <button pButton pRipple icon="pi pi-filter-fill" style="margin-top: 20px;"
+                class="p-button-rounded p-button-primary mr-2"></button>
+            </div>
+            <!--<div class="col-3">
          <div class="field ">
            <label htmlFor="product{{detailPurchasesForms.length-1}}">Produit</label>-->
-          <!--<p-dropdown [options]="products"  optionLabel="name" name="product{{detailPurchasesForms.length-1}}" [(ngModel)]="detail.product" (ngModelChange)="changeProduct(detail.product,i)">
+            <!--<p-dropdown [options]="products"  optionLabel="name" name="product{{detailPurchasesForms.length-1}}" [(ngModel)]="detail.product" (ngModelChange)="changeProduct(detail.product,i)">
              <ng-template let-product pFilter="product.category.name" pTemplate="item" >
                <div class="flex align-items-center operatingSystems-item">
                  <div>{{product.name}} ({{product.category.name}})</div>
                </div>
              </ng-template>
            </p-dropdown>-->
-          <!--<p-dropdown [options]="products"  optionLabel="name" name="product{{detailPurchasesForms.length-1}}"  [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].product" (ngModelChange)="changeProduct(detailPurchasesForms[detailPurchasesForms.length-1].product,detailPurchasesForms.length-1)"></p-dropdown>->
+            <!--<p-dropdown [options]="products"  optionLabel="name" name="product{{detailPurchasesForms.length-1}}"  [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].product" (ngModelChange)="changeProduct(detailPurchasesForms[detailPurchasesForms.length-1].product,detailPurchasesForms.length-1)"></p-dropdown>->
          </div>
        </div>-->
-          <div class="col">
-            <div class="field">
-              <label htmlFor="quantity{{detailPurchasesForms.length-1}}">Quantité</label>
-              <p-inputNumber mode="decimal" [minFractionDigits]="2"
-                name="quantity{{detailPurchasesForms.length-1}}" id="quantity{i}"
-                [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].quantity"
-                (ngModelChange)="changeValue(detailPurchasesForms[detailPurchasesForms.length-1].quantity,detailPurchasesForms.length-1)"
-                [showButtons]="true" [min]="0"></p-inputNumber>
+            <div class="col">
+              <div class="field">
+                <label htmlFor="quantity{{detailPurchasesForms.length-1}}">Quantité</label>
+                <p-inputNumber mode="decimal" [minFractionDigits]="2" name="quantity{{detailPurchasesForms.length-1}}"
+                  id="quantity{i}" [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].quantity"
+                  (ngModelChange)="changeValue(detailPurchasesForms[detailPurchasesForms.length-1].quantity,detailPurchasesForms.length-1)"
+                  [showButtons]="true" [min]="0"></p-inputNumber>
+              </div>
+            </div>
+            <div class="col">
+              <div class="field ">
+                <label htmlFor="unit{{detailPurchasesForms.length-1}}">Unité</label>
+                <p-dropdown [options]="units" optionLabel="name" name="unit{{detailPurchasesForms.length-1}}"
+                  [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].unit"
+                  (ngModelChange)="changeUnit(detailPurchasesForms.length-1)"></p-dropdown>
+              </div>
+            </div>
+
+
+
+            <div class="col-2">
+              <div class="field">
+                <label htmlFor="totalPrice{{detailPurchasesForms.length-1}}">Prix total</label>
+                <p-inputNumber mode="decimal" [minFractionDigits]="2" name="totalPrice{{detailPurchasesForms.length-1}}"
+                  id="totalPrice{{detailPurchasesForms.length-1}}"
+                  [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].totalPrice" [showButtons]="true"
+                  [min]="0"
+                  (ngModelChange)="changeValue(detailPurchasesForms[detailPurchasesForms.length-1].totalPrice,detailPurchasesForms.length-1)"></p-inputNumber>
+              </div>
+            </div>
+
+
+            <div class="col">
+              <div class="field">
+                <label htmlFor="price{{detailPurchasesForms.length-1}}">Prix à l'unité</label>
+                <p-inputNumber mode="decimal" [minFractionDigits]="2" name="value{{detailPurchasesForms.length-1}}"
+                  id="value{i}" [disabled]="true"
+                  [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].value" [showButtons]="true"
+                  [min]="0"></p-inputNumber>
+              </div>
             </div>
           </div>
-          <div class="col">
-            <div class="field ">
-              <label htmlFor="unit{{detailPurchasesForms.length-1}}">Unité</label>
-              <p-dropdown [options]="units" optionLabel="name" name="unit{{detailPurchasesForms.length-1}}"
-                [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].unit"
-                (ngModelChange)="changeUnit(detailPurchasesForms.length-1)"></p-dropdown>
-            </div>
+
+          <div *ngIf="detailPurchasesForms[detailPurchasesForms.length-1].distinctUnit" class="field">
+            <label htmlFor="price{{detailPurchasesForms.length-1}}">Quantité réelle : </label>
+            <label> {{detailPurchasesForms[detailPurchasesForms.length-1].realQuantity}}</label>
           </div>
 
 
 
-          <div class="col-2">
-            <div class="field">
-              <label htmlFor="totalPrice{{detailPurchasesForms.length-1}}">Prix total</label>
-              <p-inputNumber mode="decimal" [minFractionDigits]="2"
-                name="totalPrice{{detailPurchasesForms.length-1}}"
-                id="totalPrice{{detailPurchasesForms.length-1}}"
-                [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].totalPrice"
-                [showButtons]="true" [min]="0"
-                (ngModelChange)="changeValue(detailPurchasesForms[detailPurchasesForms.length-1].totalPrice,detailPurchasesForms.length-1)"></p-inputNumber>
-            </div>
-          </div>
+        </form>
+        <!---->
+        <div class="ml-auto btnspart  grid mt-3">
+          <button (click)="openDialogAdd()" style="margin: 10px;" pButton label="Produit non existant" pRipple
+            type="button" class="col p-button p-button-primary p-component">
+          </button>
 
+          <button style="margin: 10px;" pButton pRipple label="Ajouter"
+            [disabled]="detailPurchasesForms[detailPurchasesForms.length-1].value <= 0" type="button"
+            class="col p-button p-button-success p-component"
+            (click)="firstSaveForDetail(detailPurchasesForms[detailPurchasesForms.length-1])">
+          </button>
 
-          <div class="col">
-            <div class="field">
-              <label htmlFor="price{{detailPurchasesForms.length-1}}">Prix à l'unité</label>
-              <p-inputNumber mode="decimal" [minFractionDigits]="2"
-                name="value{{detailPurchasesForms.length-1}}" id="value{i}" [disabled]="true"
-                [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].value" [showButtons]="true"
-                [min]="0"></p-inputNumber>
-            </div>
-          </div>
+          <button style="margin: 10px;" pButton pRipple label="Annuler" type="reset"
+            class="col p-button p-button-danger p-component" (click)="showAddProductForm()">
+          </button>
         </div>
+      </div>
 
-        <div *ngIf="detailPurchasesForms[detailPurchasesForms.length-1].distinctUnit" class="field">
-          <label htmlFor="price{{detailPurchasesForms.length-1}}">Quantité réelle : </label>
-          <label> {{detailPurchasesForms[detailPurchasesForms.length-1].realQuantity}}</label>
-        </div>
-
-
-
-      </form>
-       <!---->
-       <div class="ml-auto btnspart  grid mt-3">
-         <button pButton label="Produit non existant" pRipple type="button"   class="col p-button p-button-nouveau p-component" (click)="openDialogAdd()"></button>
-         <button pButton  pRipple label="Ajouter"  type="button"  [disabled]="detailPurchasesForms[detailPurchasesForms.length-1].totalPrice <= 0"  class="col p-button-saved p-button p-component ml-7 mr-2" (click)="firstSaveForDetail(detailPurchasesForms[detailPurchasesForms.length-1])"></button>
-         <button pButton pRipple label="Annuler la saisie de ce produit" type="reset"   class="col p-button-annuler p-button p-component " (click)="showAddProductForm()"></button>
-       </div>
-     </div>
-
-     <button pButton label="Enregistrer" type="submit" [loading]="loading" class="p-button-orange mt-2 mb-2" [disabled]="!f.valid || detailPurchasesForms2.length==0" ></button>
+      <button pButton label="Enregistrer" type="submit" [loading]="loading" class="p-button-orange mt-2 mb-2"
+        [disabled]="!f.valid || detailPurchasesForms2.length==0"></button>
       <!--Partit produit-->
       <div class="mb-2 mt-1">
         <!-- <div class="flex-1 mb-2">
@@ -178,35 +187,38 @@
 
         <!-- List of created product-->
         <div class="ListProduct">
-          <p *ngIf="detailPurchasesForms2.length==0">Aucun produit pour l'instant! Veuillez remplir le formulaire pour ajouter un produit.</p>
+          <p *ngIf="detailPurchasesForms2.length==0">Aucun produit pour l'instant! Veuillez remplir le formulaire pour
+            ajouter un produit.</p>
 
           <div class="divtableau">
             <table *ngIf="detailPurchasesForms2.length!=0">
-            <thead>
-              <th>Produit</th>
-              <th>Catégory</th>
-              <th>Conditionnement</th>
-              <th>Quantité(unité)</th>
+              <thead>
+                <th>Produit</th>
+                <th>Catégory</th>
+                <th>Conditionnement</th>
+                <th>Quantité(unité)</th>
 
-              <!-- <th>Prix/unité</th> -->
-              <th>Prix Total </th>
-              <th></th>
+                <!-- <th>Prix/unité</th> -->
+                <th>Prix Total </th>
+                <th></th>
 
-            </thead>
-            <tr *ngFor="let detail of detailPurchasesForms2,let i=index">
-              <td>{{detail?.product?.name}}</td>
-              <td>{{detail.product?.category?.name}}</td>
-              <td>{{detail?.product?.conditioning?.name}}</td>
-              <td>{{detail?.realQ || detail?.quantity}} ({{detail?.realUnit || detail?.unit?.code}})</td>
-              <!-- <td>{{detail?.value | number:'1.2-2'}}/{{detail?.unit?.code}}</td> -->
-              <td>{{detail?.totalPrice}} {{ (cuuren) }}</td>
-              <td>
-                <button pButton pRipple type="button"  icon="pi pi-trash" class="p-button p-component p-button-text p-button-icon-only" (click)="confirmDeleteDetail(detail,i)"></button>
-              </td>
+              </thead>
+              <tr *ngFor="let detail of detailPurchasesForms2,let i=index">
+                <td>{{detail?.product?.name}}</td>
+                <td>{{detail.product?.category?.name}}</td>
+                <td>{{detail?.product?.conditioning?.name}}</td>
+                <td>{{detail?.realQ || detail?.quantity}} ({{detail?.realUnit || detail?.unit?.code}})</td>
+                <!-- <td>{{detail?.value | number:'1.2-2'}}/{{detail?.unit?.code}}</td> -->
+                <td>{{detail?.totalPrice}} {{ (cuuren) }}</td>
+                <td>
+                  <button pButton pRipple type="button" icon="pi pi-trash"
+                    class="p-button p-component p-button-text p-button-icon-only"
+                    (click)="confirmDeleteDetail(detail,i)"></button>
+                </td>
 
-            </tr>
+              </tr>
 
-          </table>
+            </table>
           </div>
 
         </div>
@@ -216,7 +228,7 @@
 
 
 
-         
+
 
       </div>
 
@@ -228,7 +240,7 @@
 
       <p class="divider-b"></p>
 
-      
+
 
     </div>
 
@@ -243,4 +255,5 @@
 <p-toast key="product"></p-toast>
 <p-toast key="positionDialog"></p-toast>
 
-<p-confirmDialog [style]="{ width: '50vw' }" key="positionDialog" [position]="positionModalConfirm" rejectButtonStyleClass="p-button-outlined"></p-confirmDialog>
+<p-confirmDialog [style]="{ width: '50vw' }" key="positionDialog" [position]="positionModalConfirm"
+  rejectButtonStyleClass="p-button-outlined"></p-confirmDialog>
