--- a/src/app/pages/acceuil/acceuil.component.html
+++ b/src/app/pages/acceuil/acceuil.component.html
@@ -1,1 +1,1 @@
-<img style="text-align: center;" [src]="source" width="100%" height="250px">
+<img src="assets/images/im.png" class="image" width="100%" height="250px">
