--- a/src/app/pages/plat/newdishes/newdishes.component.html
+++ b/src/app/pages/plat/newdishes/newdishes.component.html
@@ -36,7 +36,7 @@
         <div class="secaindrow grid mt-2">
   
           <div class="row row1 grid col-12">
-            <div class=" plat col-3"  pTooltip="Choisir une recette">
+            <div class=" plat col-4"  pTooltip="Choisir une recette">
               <p-dropdown [options]="recettes" pTooltip="Liste des recettes" tooltipPosition="top" autoWidth="false" [(ngModel)]="recetteSelectione" name="plat" optionLabel="name" [filter]="true" filterBy="name" [showClear]="true"  (ngModelChange)="changeRecette()" placeholder="Selectionnez une recette">
                 <ng-template pTemplate="selectedItem">
                     <div class="flex align-items-center gap-2" *ngIf="recetteSelectione">
@@ -51,24 +51,45 @@
               </p-dropdown>
             </div>
   
-            <div class="field col-2"  pTooltip="Saisissez la quantité">
+            <div class="field col-4"  pTooltip="Saisissez la quantité">
                 <p-inputNumber mode="decimal" [minFractionDigits]="2" name="quantite" id="quantite" [(ngModel)]="recetteSelectione.net" [showButtons]="true" [min]="0" (ngModelChange)="changePoid()" ></p-inputNumber>
             </div>
   
-            <div class="field col-2"  pTooltip="Choisir l'unité">
+            <div class="field col-4"  pTooltip="Choisir l'unité">
               <p-dropdown [options]="units"  name="unit" [(ngModel)]="unitSelectionne" (ngModelChange)="changeUnit()" >
               </p-dropdown>
             </div>
-            <div class="col">
   
+            <button pButton label="Ajouter la recette" type="button" [loading]="loadingLine" class="p-button-primary mt-2" (click)="addNewComposition()" ></button>
+     
+          </div>
+
+          <div class="info-table">
+            <div class="info-header">
+              <div class="info-header-cell">Recette</div>
+              <div class="info-header-cell">Quantité %</div>
+              <div class="info-header-cell">Cout</div>
+              <div class="info-header-cell">Actions</div>
             </div>
-  
-            <div class="field col-2">
-              <button pButton label="Ajouter la recette" type="button" [loading]="loadingLine" class="p-button-newline-red mt-2" (click)="addNewComposition()" ></button>
+
+            <!-- Loop to display details -->
+            <div *ngFor="let detail of compositionDishes,let i=index" class="info-row">
+              <div class="info-cell">{{detail?.recipe?.name}}</div>
+              <div class="info-cell">{{detail?.quantity| number: '1.0-3' }} G</div>
+              <div class="info-cell"><span appPriceFormater [priceValue]="detail.cout | number: '1.0-2'">{{detail?.cout| number: '1.0-3' }}</span>  FCFA</div>
+              <div class="info-cell">
+                <button pButton pRipple type="button"  icon="pi pi-trash" class="p-button p-component p-button-text p-button-icon-only" (click)="confirmDeleteComposition(detail,i)"></button>
+              </div>
+              <div class="nodetail m-2 head-center" *ngIf="compositionDishes.length==0">
+                <label for="">
+                  Aucune recettes
+                </label>
+              </div>
             </div>
+            
           </div>
   
-          <div class="row2 ">
+          <!-- <div class="row2 ">
             <div class="ingredients ">
               <div class="listIngredients  ">
                 <div class="entetelist divblue">
@@ -96,7 +117,7 @@
               </div>
             </div>
   
-          </div>
+          </div> -->
         </div>
   
         <!--Image-->
