--- a/src/app/pages/plat/newdishes/newdishes.component.scss
+++ b/src/app/pages/plat/newdishes/newdishes.component.scss
@@ -3,7 +3,7 @@ $noir: #00000085;
 $blanc: #ffffff;
 $grisFonce: #22222269;
 $grisMoyen: #555555;
-$grisClair: #aaaaaa;
+$grisClair: #aaaaaa33;
 $newgray: #595959;
 
 $margintopValu: 10px;
@@ -66,7 +66,8 @@ $borderRadiusValu: 8px;
     .linebdy {
       border: 2px solid rgba(0, 0, 0, 0);
       padding: 0px $paddindValu;
-      color: $noir !important;
+      color: white;
+      background-color: $grisClair;
     }
   }
 }
@@ -147,8 +148,8 @@ $borderRadiusValu: 8px;
   padding: $paddindValu;
   border: 2px solid $noir;
   font-size: 12px;
-  color: $blanc;
-  background-color: $newgray;
+  color: black;
+  background-color: white;
   border-radius: $borderRadiusValu;
   font-weight: bold;
   display: flex;
@@ -196,15 +197,12 @@ $borderRadiusValu: 8px;
   width: auto;
 }
 
-.p-button-newline-red {
-  margin: auto;
-  background: $grisFonce;
-  color: $blanc;
-  border: 1px solid $grisFonce;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.p-button-primary {
+  border: none;
   width: auto;
+  margin: auto;
+  display: block;
+  text-align: center;
 }
 
 .p-button-newline-red:hover {
@@ -251,4 +249,45 @@ $borderRadiusValu: 8px;
   .listIngredients {
     overflow-x: scroll;
   }
+}
+
+
+.info-table {
+  width: 100%;
+  border-collapse: collapse;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+
+.info-header {
+  display: flex;
+  background-color: #f0f0f0;
+  border-bottom: 1px solid #ddd;
+  font-weight: bold;
+  color: #555;
+  padding: 12px 16px;
+}
+
+.info-header-cell {
+  flex: 1;
+  text-align: left;
+}
+
+.info-row {
+  display: flex;
+  border-bottom: 1px solid #ddd;
+  padding: 12px 16px;
+}
+
+.info-row:last-child {
+  border-bottom: none;
+}
+
+.info-cell {
+  flex: 1;
+  padding: 12px 16px;
 }
