--- a/src/app/pages/recipe/preparationrecipe/preparationrecipe.component.html
+++ b/src/app/pages/recipe/preparationrecipe/preparationrecipe.component.html
@@ -18,8 +18,8 @@
               </div>
               <div class="row grid">
                 <div class=" plat col-4">
-                  <p-dropdown [options]="recettes" pTooltip="Liste des recettes" tooltipPosition="top" autoWidth="false" [(ngModel)]="recetteSelectione" name="plat" optionLabel="name" [filter]="true" filterBy="name" [showClear]="true"  (ngModelChange)="changePlat()" placeholder="Selectionnez une recette">
-                    <ng-template pTemplate="selectedItem">
+                  <p-dropdown [options]="recettes" [(ngModel)]="recetteSelectione" name="plat" optionLabel="name" [filter]="true" filterBy="name" (ngModelChange)="changePlat()" placeholder="Selectionnez une recette">
+                    <!-- <ng-template pTemplate="selectedItem">
                         <div class="flex align-items-center gap-2" *ngIf="recetteSelectione">
                             <div>{{ recetteSelectione.name }}</div>
                         </div>
@@ -28,7 +28,7 @@
                         <div class="flex align-items-center gap-2">
                             <div>{{ plat.name }}</div>
                         </div>
-                    </ng-template>
+                    </ng-template> -->
                   </p-dropdown>
                 </div>
   
