--- a/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
+++ b/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
@@ -51,7 +51,7 @@
         </ng-container>
 
 
-        <ng-container matColumnDef="action">
+        <!-- <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
             Action
           </th>
@@ -62,7 +62,7 @@
               ><i-tabler name="eye" class="icon-18"></i-tabler
             ></a>
           </td>
-        </ng-container>
+        </ng-container> -->
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
