--- a/src/app/pages/create-course/create-course.component.html
+++ b/src/app/pages/create-course/create-course.component.html
@@ -62,22 +62,26 @@
             <div class="grid">
 
               <div class="col-3">
-                <div class="field ">
-                  <label htmlFor="product{{detailPurchasesForms.length-1}}">Produit</label>
-                  <!--<p-dropdown [options]="categorys" optionLabel="name" [(ngModel)]="category" name="categoty"  (ngModelChange)="getProductCategory(category)"></p-dropdown>-->
-                  <p-dropdown [filter]="true" filterBy="name" [options]="products" optionLabel="name"
-                    name="product{{detailPurchasesForms.length-1}}" (onFocus)="getProducts()"
-                    [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].product"
-                    (ngModelChange)="changeProduct(detailPurchasesForms[detailPurchasesForms.length-1].product,detailPurchasesForms.length-1)">
-                    <ng-template let-product pFilter="product.category.name" pTemplate="item">
-                      <div class="flex align-items-center operatingSystems-item">
-                        <div>{{product.name}} ({{product.category.name}} / {{product?.conditioning?.name}})
-                        </div>
-                      </div>
-                    </ng-template>
-                  </p-dropdown>
+                <div style="margin-top: -12px;"   class="field flex align-items-center gap-2">
+                  <label htmlFor="product{{detailPurchasesForms.length-1}}" class="w-6rem">Produit</label>
+                  <button style="margin-top: -15px;" pButton pRipple type="button" icon="pi pi-plus"
+                    class="p-button-rounded p-button-success small-button p-mr-2 h-full"
+                    (click)="openDialogAdd()">
+                  </button>
                 </div>
+              
+                <p-dropdown [filter]="true" filterBy="name" [options]="products" optionLabel="name"
+                  name="product{{detailPurchasesForms.length-1}}" (onFocus)="getProducts()"
+                  [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].product"
+                  (ngModelChange)="changeProduct(detailPurchasesForms[detailPurchasesForms.length-1].product,detailPurchasesForms.length-1)">
+                  <ng-template let-product pFilter="product.category.name" pTemplate="item">
+                    <div class="flex align-items-center operatingSystems-item">
+                      <div>{{product.name}} ({{product.category.name}} / {{product?.conditioning?.name}})</div>
+                    </div>
+                  </ng-template>
+                </p-dropdown>
               </div>
+              
 
               <div class="col">
                 <div class="field">
