--- a/src/app/pages/create-course/create-course.component.scss
+++ b/src/app/pages/create-course/create-course.component.scss
@@ -10,6 +10,13 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+.small-button {
+  width: 24px !important;
+  height: 24px !important;
+  font-size: 12px !important;
+  margin-top: -24px;
+}
+
 /* Titres */
 .dialog-title {
   text-align: center;
