--- a/src/app/pages/course/modalpurchase/modalpurchase.component.scss
+++ b/src/app/pages/course/modalpurchase/modalpurchase.component.scss
@@ -133,3 +133,10 @@ tr:nth-child(even) {
   border-radius: 6px;
   color: #333;
 }
+
+.small-button {
+  width: 24px !important;
+  height: 24px !important;
+  font-size: 12px !important;
+  margin-top: -24px;
+}
