--- a/src/app/pages/create-course/create-course.component.html
+++ b/src/app/pages/create-course/create-course.component.html
@@ -62,14 +62,14 @@
             <div class="grid">
 
               <div class="col-3">
-                <div style="margin-top: -12px;"   class="field flex align-items-center gap-2">
+                <div style="margin-top: -12px;" class="field flex align-items-center gap-2">
                   <label htmlFor="product{{detailPurchasesForms.length-1}}" class="w-6rem">Produit</label>
-                  <button style="margin-top: -15px;" pButton pRipple type="button" icon="pi pi-plus"
-                    class="p-button-rounded p-button-success small-button p-mr-2 h-full"
-                    (click)="openDialogAdd()">
+                  <button style="margin-top: -15px;" pButton pRipple type="button" icon="pi pi-plus"  pTooltip="Ajouter un produit non existant" 
+                  tooltipPosition="top"
+                    class="p-button-rounded p-button-success small-button p-mr-2 h-full"  (click)="openDialogAdd()">
                   </button>
                 </div>
-              
+
                 <p-dropdown [filter]="true" filterBy="name" [options]="products" optionLabel="name"
                   name="product{{detailPurchasesForms.length-1}}" (onFocus)="getProducts()"
                   [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].product"
@@ -81,7 +81,7 @@
                   </ng-template>
                 </p-dropdown>
               </div>
-              
+
 
               <div class="col">
                 <div class="field">
@@ -126,7 +126,7 @@
               </div>
               <div class="col mt-5">
                 <div class="field">
-                  <label htmlFor="price{{detailPurchasesForms.length-1}}">           </label>
+                  <label htmlFor="price{{detailPurchasesForms.length-1}}"> </label>
                   <button pButton pRipple label="Ajouter"
                     [disabled]="detailPurchasesForms[detailPurchasesForms.length-1].value <= 0" type="button"
                     class="col p-button p-button-success p-component"
