--- a/src/app/pages/plat/modaldishes/modaldishes.component.scss
+++ b/src/app/pages/plat/modaldishes/modaldishes.component.scss
@@ -1,10 +1,12 @@
 // Définition des couleurs en nuances de gris
-$noir: #000000;
+// Définition des couleurs en nuances de gris
+$noir: #00000085;
 $blanc: #ffffff;
-$grisFonce: #222222;
+$grisFonce: #22222269;
 $grisMoyen: #555555;
-$grisClair: #aaaaaa;
+$grisClair: #aaaaaa33;
 $newgray: #595959;
+
 
 $margintopValu: 10px;
 $paddindValu: 8px;
@@ -251,4 +253,53 @@ $borderRadiusValu: 8px;
   .listIngredients {
     overflow-x: scroll;
   }
+}
+
+
+.info-table {
+  width: 100%;
+  border-collapse: collapse;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+
+.info-header {
+  display: flex;
+  background-color: #f0f0f0;
+  border-bottom: 1px solid #ddd;
+  font-weight: bold;
+  color: #555;
+  padding: 12px 16px;
+}
+
+.info-header-cell {
+  flex: 1;
+  text-align: left;
+}
+
+.info-row {
+  display: flex;
+  border-bottom: 1px solid #ddd;
+  padding: 12px 16px;
+}
+
+.info-row:last-child {
+  border-bottom: none;
+}
+
+.p-button-primary {
+  border: none;
+  width: auto;
+  margin: auto;
+  display: block;
+  text-align: center;
+}
+
+.info-cell {
+  flex: 1;
+  padding: 12px 16px;
 }
