--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -303,9 +303,9 @@
                     </div>
                     <div class="col-12">
                       <div class="field">
-                        <label htmlFor="lostpercentage">Pourcentage de perte</label>
-                        <p-inputNumber mode="decimal" [minFractionDigits]="2" name="lostpercentage" id="lostpercentage"
-                          [(ngModel)]="productData.lostpercentage" [showButtons]="true" [min]="0" [suffix]="'%'">
+                        <label htmlFor="lossPercentage">Pourcentage de perte</label>
+                        <p-inputNumber mode="decimal" [minFractionDigits]="2" name="lossPercentage" id="lossPercentage"
+                          [(ngModel)]="productData.lossPercentage" [showButtons]="true" [min]="0" [suffix]="'%'">
                         </p-inputNumber>
                       </div>
             
