--- a/src/app/pages/course/modalpurchase/modalpurchase.component.html
+++ b/src/app/pages/course/modalpurchase/modalpurchase.component.html
@@ -68,7 +68,7 @@
       <p class="divider"></p>
 
       <!--Formulaire d'ajout-->
-      <h3>Saisie nouvel achat de produit </h3>
+      <!-- <h3>Saisie nouvel achat de produit </h3> -->
       <div class="cardnew mt-5 mb-5">
         <form class="p-fluid  ">
           <div class="grid">
