--- a/src/app/pages/create-course/create-course.component.html
+++ b/src/app/pages/create-course/create-course.component.html
@@ -56,7 +56,7 @@
 
 
         <!--Formulaire d'ajout-->
-        <h3>Saisie nouvel achat de produit </h3>
+        <!-- <h3>Saisie nouvel achat de produit </h3> -->
         <div class="cardnew mt-5">
           <form class="p-fluid  ">
             <div class="grid">
